<resources>
    <string name="app_name">Newsroom</string>
    <string name="toddo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="loGin">Login</string>
    <string name="reGister">Register</string>
    <string name="todddo">TODO</string>
    <string name="rEgister">Register</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="Email">Email</string>
    <string name="pasSword">Password</string>
    <string name="register">Register</string>
    <string name="aready_have_an_account_sing_in">Aready have an account? Sing In</string>
    <string name="bAck"><![CDATA[<<Back]]></string>
    <string name="health_news">Health News</string>
    <string name="discover_the__latest_bla_bla_bla">Discover the latest bla bla bla</string>
    <string name="log_oUt">Log Out</string>
    <string name="the_newsroom">The NewsRoom</string>
    <string name="browser_through_the_news">Browser through the news</string>
    <string name="politics">Politics</string>
    <string name="discover_the_latest_bla_blA_bla">Discover the latest bla bla bla</string>
    <string name="toodo">TODO</string>
    <string name="sports">Sports</string>
    <string name="discover_the_latest_bla_bla_Bla">Discover the latest bla bla bla</string>
    <string name="ttodo">TODO</string>
    <string name="health">Health</string>
    <string name="discover__the_latest_bla_bla_bla">Discover the latest bla bla bla</string>
    <string name="tooodo">TODO</string>
    <string name="technology">Technology</string>
    <string name="Discover_the_latest_bla_bla_bla">Discover the latest bla bla bla</string>
    <string name="todo">TODO</string>
    <string name="log_ouT">Log Out</string>
    <string name="todO">TODO</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sing_up">Don\'t have an account? Sing Up</string>
    <string name="back"><![CDATA[<<Back]]></string>
    <string name="politics_news">Politics News</string>
    <string name="dIscover_the_latest_bla_bla_bla">Discover the latest bla bla bla</string>
    <string name="log_out">Log Out</string>
    <string name="sports_news">Sports News</string>
    <string name="discover_the_latest_bla_bla_bla">Discover the latest bla bla bla</string>
    <string name="loG_out">Log Out</string>
    <string name="log__out">Log Out</string>
    <string name="technology_news">Technology News</string>
    <string name="discover_the_latest_bla_bla__bla">Discover the latest bla bla bla</string>
</resources>