<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d6e6a"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/incon5"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.03"
        android:text="@string/login"
        android:textColor="#0d6e6a"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:paddingStart="20dp"
        android:background="@drawable/edittext"
        android:hint="Email"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        tools:ignore="LabelFor,RtlSymmetry"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:paddingStart="20dp"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:hint="Password"
        android:inputType="textPassword" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="#fff"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sing_up"
        android:textColor="#fff"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:text="back"
        android:textColor="#fff"
        android:textSize="12sp"
        android:inputType="" />


</LinearLayout>